--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: #302432;
   margin: 0;
   padding: 0;
@@ -9,35 +9,56 @@ body {
 #box-header {
   background-image: url(images/background.png);
   background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
+
 #box-header #box-header-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
+
 #box-header #box-header-top #logo-header {
   height: 45px;
   width: 45px;
   border-radius: 50%;
   background-color: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   margin: 2%;
 }
+
 #box-header #box-header-top #panier-header {
   height: 2.5em;
   width: 2.5em;
   border-radius: 50%;
-  fill: rgb(72, 135, 177);
+  fill: #4887b1;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   margin: 2%;
 }
+
 #box-header #h1-header {
   text-align: center;
   font-size: 250%;
-  font-family: "Nerko One", cursive;
+  font-family: 'Nerko One', cursive;
   padding: 10vh 0vw 0vh;
 }
 
@@ -48,57 +69,68 @@ body {
   line-height: 150%;
   letter-spacing: 50%;
 }
+
 #p-description .p1-gras {
-  font-family: "Nerko One", cursive;
+  font-family: 'Nerko One', cursive;
   font-size: 150%;
 }
+
 #p-description .p1-c {
-  font-family: "Nerko One", cursive;
+  font-family: 'Nerko One', cursive;
   font-size: 150%;
   color: #fb7539;
 }
+
 #p-description .p1-o {
-  font-family: "Nerko One", cursive;
+  font-family: 'Nerko One', cursive;
   font-size: 150%;
   color: #c8e17c;
 }
+
 #p-description .p1-l {
-  font-family: "Nerko One", cursive;
+  font-family: 'Nerko One', cursive;
   font-size: 150%;
   color: #f68091;
 }
+
 #p-description .p1-o2 {
-  font-family: "Nerko One", cursive;
+  font-family: 'Nerko One', cursive;
   font-size: 150%;
   color: #c8e17c;
 }
+
 #p-description .p1-r {
-  font-family: "Nerko One", cursive;
+  font-family: 'Nerko One', cursive;
   font-size: 150%;
   color: #fb7539;
 }
+
 #p-description .p1-é {
-  font-family: "Nerko One", cursive;
+  font-family: 'Nerko One', cursive;
   font-size: 150%;
   color: #c8e17c;
 }
+
 #p-description .p3-simple {
-  font-family: "Nerko One", cursive;
+  font-family: 'Nerko One', cursive;
   font-size: 200%;
 }
+
 #p-description .p3-gras {
-  font-family: "Nerko One", cursive;
+  font-family: 'Nerko One', cursive;
   font-size: 200%;
   color: #f68091;
 }
+
 #p-description .p3-excl {
-  font-family: "Nerko One", cursive;
+  font-family: 'Nerko One', cursive;
   font-size: 200%;
 }
 
 #carte-végé {
   width: 100%;
   height: 51%;
+  display: -ms-grid;
   display: grid;
   margin-bottom: 2em;
 }
@@ -108,7 +140,11 @@ body {
   width: 50%;
   height: 25.5%;
   z-index: 1;
-  grid-area: 1/1/2/2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-area: 1 / 1 / 2 / 2;
   background-color: #c8e17c;
   background-image: url(images/backgroundblanc.png);
   background-size: cover;
@@ -119,7 +155,7 @@ body {
   position: absolute;
   z-index: 2;
   color: white;
-  font-family: "Nerko One", cursive;
+  font-family: 'Nerko One', cursive;
   font-size: 350%;
   text-transform: uppercase;
   margin-left: 1.2em;
@@ -127,21 +163,33 @@ body {
 }
 
 #v-plat-1 {
-  grid-area: 1/2/2/3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-area: 1 / 2 / 2 / 3;
   background-image: url(images/VEGGIE01.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 #v-plat-2 {
-  grid-area: 2/1/3/2;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-area: 2 / 1 / 3 / 2;
   background-image: url(images/VEGGIE02.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 #v-plat-3 {
-  grid-area: 2/2/3/3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-area: 2 / 2 / 3 / 3;
   background-image: url(images/VEGGIE03.png);
   background-size: cover;
   background-repeat: no-repeat;
@@ -150,6 +198,7 @@ body {
 #carte-sucré {
   width: 100%;
   height: 51%;
+  display: -ms-grid;
   display: grid;
   margin-bottom: 2em;
 }
@@ -159,20 +208,24 @@ body {
   width: 50%;
   height: 25.5%;
   z-index: 1;
-  grid-area: 1/1/2/2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-area: 1 / 1 / 2 / 2;
   background-color: #f68091;
   background-image: url(images/backgroundblanc.png);
   background-size: cover;
   background-repeat: no-repeat;
   color: white;
-  font-family: "Nerko One", cursive;
+  font-family: 'Nerko One', cursive;
 }
 
 .sucré-txt {
   position: absolute;
   z-index: 2;
   color: white;
-  font-family: "Nerko One", cursive;
+  font-family: 'Nerko One', cursive;
   font-size: 350%;
   text-transform: uppercase;
   margin-left: 20%;
@@ -180,21 +233,33 @@ body {
 }
 
 #s-plat-1 {
-  grid-area: 1/2/2/3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-area: 1 / 2 / 2 / 3;
   background-image: url(images/SUGAR01.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 #s-plat-2 {
-  grid-area: 2/1/3/2;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-area: 2 / 1 / 3 / 2;
   background-image: url(images/SUGAR02.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 #s-plat-3 {
-  grid-area: 2/2/3/3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-area: 2 / 2 / 3 / 3;
   background-image: url(images/SUGAR03.png);
   background-size: cover;
   background-repeat: no-repeat;
@@ -203,6 +268,7 @@ body {
 #carte-bouffé {
   width: 100%;
   height: 51%;
+  display: -ms-grid;
   display: grid;
 }
 
@@ -211,20 +277,24 @@ body {
   width: 50%;
   height: 25.5%;
   z-index: 1;
-  grid-area: 1/1/2/2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-area: 1 / 1 / 2 / 2;
   background-color: #fb7539;
   background-image: url(images/backgroundblanc.png);
   background-size: cover;
   background-repeat: no-repeat;
   color: white;
-  font-family: "Nerko One", cursive;
+  font-family: 'Nerko One', cursive;
 }
 
 .bouffé-txt {
   position: absolute;
   z-index: 2;
   color: white;
-  font-family: "Nerko One", cursive;
+  font-family: 'Nerko One', cursive;
   font-size: 350%;
   text-transform: uppercase;
   margin-left: 16%;
@@ -232,21 +302,33 @@ body {
 }
 
 #b-plat-1 {
-  grid-area: 1/2/2/3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-area: 1 / 2 / 2 / 3;
   background-image: url(images/JUNK01.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 #b-plat-2 {
-  grid-area: 2/1/3/2;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-area: 2 / 1 / 3 / 2;
   background-image: url(images/JUNK02.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 #b-plat-3 {
-  grid-area: 2/2/3/3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-area: 2 / 2 / 3 / 3;
   background-image: url(images/JUNK03.png);
   background-size: cover;
   background-repeat: no-repeat;
@@ -256,7 +338,7 @@ footer {
   width: auto;
   height: 15em;
   background-size: cover;
-  background-color: rgb(72, 135, 177);
+  background-color: #4887b1;
 }
 
 #p-footer {
@@ -267,8 +349,12 @@ footer {
 
 #icons {
   list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding: 0em 0.5em 2em 0.5em;
   fill: #302432;
 }
@@ -284,24 +370,39 @@ footer {
 @media screen and (min-width: 1023px) {
   #cartes {
     height: 30em;
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    -ms-grid-rows: (1fr)[2];
+        grid-template-rows: repeat(2, 1fr);
   }
   #carte-végé {
     height: 30em;
-    grid-area: 2/1/3/2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-area: 2 / 1 / 3 / 2;
     background-size: cover;
   }
   #carte-sucré {
     height: 30em;
     background-size: cover;
-    grid-area: 2/2/3/3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-area: 2 / 2 / 3 / 3;
   }
   #carte-bouffé {
     height: 30em;
     background-size: cover;
-    grid-area: 2/3/3/4;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 1;
+    grid-area: 2 / 3 / 3 / 4;
   }
   #s-titre {
     position: absolute;
@@ -328,15 +429,15 @@ footer {
     margin-top: 35%;
   }
   #facebook:hover {
-    fill: rgb(255, 255, 255);
+    fill: white;
     cursor: pointer;
   }
   #insta:hover {
-    fill: rgb(255, 255, 255);
+    fill: white;
     cursor: pointer;
   }
   #twitter:hover {
-    fill: rgb(255, 255, 255);
+    fill: white;
     cursor: pointer;
   }
   footer {
@@ -352,6 +453,7 @@ footer {
     font-size: 1.5em;
   }
 }
+
 @media (prefers-color-scheme: dark) {
   body {
     background-color: #302432;
@@ -363,4 +465,218 @@ footer {
   #p-description {
     color: white;
   }
-}/*# sourceMappingURL=style.css.map */
+}
+
+/******************PANIER******************/
+.cart-btn {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+#cart {
+  position: relative;
+  font-size: 2rem;
+  cursor: pointer;
+  margin: 1em 4em 0 0;
+}
+
+.cart-quantity {
+  color: white;
+  background-color: red;
+  padding: .2em .3em;
+  position: absolute;
+  margin: .8em 7.5em 0 0;
+  right: 0;
+  border: solid 2px red;
+  border-radius: 15px;
+  font-weight: bolder;
+}
+
+.divVege .add-to-cart {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.divSucre .add-to-cart {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.divBouffe .add-to-cart {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.product-image {
+  margin-bottom: 1em;
+}
+
+.add-to-cart {
+  background-color: black;
+  color: white;
+  position: absolute;
+  right: 0;
+  top: 65%;
+  padding: .5em 1em;
+  -webkit-transform: translateX(300px);
+          transform: translateX(300px);
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  font-weight: bolder;
+  font-size: 1.2rem;
+}
+
+.product-price {
+  padding-top: 1em;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.cart-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+  -webkit-transform: translateX(-200%);
+          transform: translateX(-200%);
+  -webkit-transition: .5s ease-out;
+  transition: .5s ease-out;
+}
+
+.cart-modal {
+  height: 100vh;
+  width: 50%;
+  background-color: #323232;
+  float: right;
+  overflow: scroll;
+  overflow-x: hidden;
+  position: relative;
+}
+
+#close-btn {
+  font-size: 1.5rem;
+  margin: .5em 1em 0 0;
+  color: white;
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+}
+
+.cart-is-empty {
+  color: white;
+  text-align: center;
+  font-size: 1.5rem;
+  margin-bottom: 1em;
+  display: none;
+}
+
+.total {
+  text-align: center;
+  margin: 2em 0 2em 0;
+  /*   display: none; */
+}
+
+.cart-total {
+  color: white;
+}
+
+.total-price {
+  color: white;
+  font-size: 2rem;
+  display: block;
+}
+
+.purchase-btn {
+  font-size: 1rem;
+  font-weight: bolder;
+  background-color: green;
+  color: white;
+  padding: 1em 2em;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  margin: 2em 0 1em 0;
+}
+
+.product-rows {
+  margin-top: 3em;
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.product-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.cart-image {
+  width: 10rem;
+  margin: 1em;
+}
+
+.cart-price {
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bolder;
+}
+
+.product-quantity {
+  width: 4rem;
+  font-size: 2rem;
+  margin-left: 3rem;
+}
+
+.remove-btn {
+  padding: 1em 2em;
+  background-color: red;
+  color: white;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  margin-left: 3rem;
+  font-weight: bolder;
+  font-size: 1rem;
+}
+
+.remove-btn:active {
+  -webkit-transform: translateY(5px);
+          transform: translateY(5px);
+}
+
+@media (max-width: 1000px) {
+  .cart-modal {
+    width: 100vw;
+  }
+  .product-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    margin-bottom: 2em;
+  }
+  .remove-btn {
+    margin: 0;
+  }
+  .product-quantity {
+    margin: .5em 0 .5em 0;
+  }
+}
+/*# sourceMappingURL=style.css.map */
